--- a/cucmberproject/.project
+++ b/cucmberproject/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>MakeMytrip_cucumber</name>
+	<name>cucmberproject</name>
 	<comment></comment>
 	<projects>
 	</projects>
